--- a/main.html
+++ b/main.html
@@ -11,6 +11,11 @@
 </head>
 <body>
 
+<script type="text/javascript">
+    window.localStorage.token = 'eL6mbI8p5ELkIqOu6eLaDUckaUDlulcSkzJUrjvcPBzHscugwCnC2XOnXyE89qXHztVmNt8YvhfFRJo5zIR4dg==';
+    window.localStorage.appKey = 'cpj2xarlc6yyn';
+</script>
+
 <div class="login">
     <div class="login-box">
         <p>AppKey：</p><input value="cpj2xarlc6yyn" name="appKey" class="app-key" type="text">
